Tests repository : stockline, unit, ingredient, stock, repository